# grvk

./: LICENSE  README.md  meson.build  version.h.in
.github/workflows/: build.yml
include/: vk_mem_alloc.h
include/amdil/: amdil.h
include/mantle/: mantle.h  mantleDbg.h  mantleExt.h  mantleWsiWinExt.h
src/: meson.build
src/amdilc/: amdilc.c  amdilc.h  amdilc_binding_patcher.c  amdilc_compiler.c  amdilc_decoder.c  amdilc_dump.c  amdilc_internal.h  amdilc_passthrough_compiler.c  amdilc_rect_gs_compiler.c  amdilc_rect_polygon_compiler.c  amdilc_rect_polygon_compiler.h  amdilc_spirv.c  amdilc_spirv.h  main.c  meson.build  util.c
src/logger/: logger.c  logger.h  meson.build
src/mantle/: format.c  grvk_object.h  main.c  mantle.c  mantle32.def  mantle64.def  mantle_cmd_buf.c  mantle_cmd_buf_man.c  mantle_cmd_buf_memory.c  mantle_descriptor_set.c  mantle_extension_discovery.c  mantle_image.c  mantle_image_sample.c  mantle_image_view.c  mantle_init_device.c  mantle_internal.h  mantle_memory_man.c  mantle_multi_dev_man.c  mantle_object.h  mantle_object_man.c  mantle_query_pool_man.c  mantle_query_sync.c  mantle_queue.c  mantle_shader_pipeline.c  mantle_state_object.c  mantle_wsi.c  mantle_wsi.h  meson.build  quirk.c  quirk.h  stub.c  util.c  vma.cpp  vulkan_loader.c  vulkan_loader.h
src/mantleaxl/: main.c  mantleaxl32.def  mantleaxl64.def  mantleaxl_border_color_palette_ext.c  mantleaxl_lib_version.c  meson.build  stub.c
src/mantleilc/: main.c  meson.build
src/mantleinfo/: main.c  mantle_loader.c  mantle_loader.h  meson.build
test/: amdil-cmp.py  amdil-dis.c  meson.build
test/res/: il_boredcircuit.txt  il_creation.txt  il_e1m1.txt  il_flame.txt  il_frog.txt  il_happyjumping.txt  il_indexing.txt  il_microwaves.txt  il_primitives.txt  il_protean.txt  il_seascape.txt  il_starnest.txt  il_wolf3d.txt
